# mockaron

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  README.rst  conanfile.py  deploy.yml  pyproject.toml  run-ci.py  setup.py  tbump.toml
include/mockaron/: mockaron.hpp
include/mockaron/detail/: typetraits.hpp
src/: mockaron.cpp
test/: CMakeLists.txt  mymock.cpp  mymock.hpp  test.cpp  testlib.cpp  testlib.hpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
