[tool.poetry]
name = "mockaron"
version = "0.0.0"
description = "C++ mock framework"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"

ci = { git = "git+ssh://git@tanker.local/Tanker/ci", branch = "master" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
